# moui-hunter-example

./: .gitmodules  LICENSE  README.md
android/: .gitignore
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: jni.cc
android/app/src/main/java/com/moui/hunter/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
app/: CMakeLists.txt  application.cc  application.h  demo_view.cc  demo_view.h  main.cc
ios/: CMakeLists.txt  Info.plist  MOAppDelegate.h  MOAppDelegate.mm  main.mm  toolchain.cmake
mac/: CMakeLists.txt  MOAppDelegate.h  MOAppDelegate.mm  main.mm  toolchain.cmake
